# SIMDanigans

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
benches/: bench_find.rs  bench_find_16.rs
src/: argmin.rs  find.rs  lib.rs  main.rs
