[package]
name = "simdanigans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"]}

[[bench]]
name = "bench_find"
harness = false

[[bench]]
name = "bench_find_16"
harness = false

